--- a/e-commerce/app/globals.css
+++ b/e-commerce/app/globals.css
@@ -2,12 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
 
-@layer base {
-  :root {
-    --radius: 0.5rem;
-  }
+.bgone{
+  @apply  bg-white dark:bg-mycolor-100;
 }
